<resources>
    <string name="app_name">Lend Library</string>
    <string name="phone">Username or Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="registerbutton">Register</string>
    <string name="library">Library</string>
    <string name="lend">Lend</string>
    <string name="logo">Logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="remail">Phone Number</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="email_address">Email address</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="books">Books</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="devs">About the developers</string>
    <string name="profile">Profile</string>
    <string name="name">Lend Library</string>
    <string name="email">admin@lendlibrary.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="refer_friends">Refer Friends</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="my_books">My Books</string>
    <string name="lended_books">Borrowed Books</string>
    <string name="nearby_lenders">Nearby Lenders</string>
    <string name="dev1">Parash Subedi</string>
    <string name="dev1_port"><![CDATA[Frontend & Backend Developer]]></string>
    <string name="dev1_stud">Kathmandu University</string>
    <string name="app_desc">We are the group of positive, creative, social, enthusiastic and curious learners who love designing and programming. We are warmed of new programming languages, technologies and ideas.</string>
    <string name="special_thanks">Special thanks: Arpan Koirala</string>
    <string name="dev3">Nischal Chand Thakuri</string>
    <string name="dev2">Ritik Tamrakar</string>
    <string name="contact_me">Contact me</string>
    <string name="add_books">Add Books</string>
    <string name="name_of_book">Name of book</string>
</resources>
