<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"
            />
        <item
            android:id="@+id/navigation_books"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/books"
            />
        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile"
            />
    </group>
    <group>
        <item
            android:id="@+id/my_books"
            android:title="@string/my_books"
            />
        <item
            android:id="@+id/Lended_books"
            android:title="@string/lended_books"
            />
        <item
            android:id="@+id/nearby_lenders"
            android:title="@string/nearby_lenders"
            android:icon="@drawable/ic_nearby_lenders"
            />
        <item
            android:id="@+id/about_developers"
            android:icon="@drawable/ic_developer_mode_black_24dp"
            android:title="@string/devs"
            />
    </group>
    <group>
        <item
            android:id="@+id/invite"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/refer_friends"/>
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_keyboard_return_black_24dp"
            android:title="@string/sign_out"
            />
    </group>

</menu>