<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:background="@drawable/gradient_background_register"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="70dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/icon"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp">

            <TextView
                android:id="@+id/app_name_initial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center_horizontal"
                android:text="@string/lend"
                android:textColor="#fff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/app_name_final"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_horizontal"
                android:text="@string/library"
                android:textColor="#D4D3DD"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="250dp"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp">

                <EditText
                    android:id="@+id/register_fname_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:background="@drawable/textbox_background_dark"
                    android:paddingBottom="12dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="12dp"
                    android:textColor="#424242"
                    android:textColorHint="#adadad"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/register_lname_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:background="@drawable/textbox_background_dark"
                    android:paddingBottom="12dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="12dp"
                    android:textColor="#424242"
                    android:textColorHint="#adadad"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textbox_background_dark"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textPersonName"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:textColor="#424242"
                android:textColorHint="#adadad"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/register_username_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textbox_background_dark"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:textColor="#424242"
                android:textColorHint="#adadad"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/register_phone_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textbox_background_dark"
                android:ems="10"
                android:hint="@string/remail"
                android:inputType="phone"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:textColor="#424242"
                android:textColorHint="#adadad"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/register_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/textbox_background_dark"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:textColor="#424242"
                android:textColorHint="#adadad"
                android:textSize="15sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/confirm_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:background="@drawable/textbox_background_dark"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:textColor="#424242"
                android:textColorHint="#adadad"
                android:textSize="15sp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="25dp">

                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="45sp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/gradient_button_rounded_oval"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingEnd="30dp"
                    android:paddingStart="30dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/register_submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="41sp"
                    android:text="@string/register"
                    android:paddingRight="25dp"
                    android:paddingLeft="25dp"
                    android:background="@drawable/outline_button_background_dark"
                    android:textColor="#606060"
                    android:textAllCaps="false"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:visibility="gone"
        /><!-- Progress bar -->
</LinearLayout>